--- a/5_CssProperties/test.html
+++ b/5_CssProperties/test.html
@@ -11,7 +11,7 @@
   <body>
     <img src="./img/river_background.jpg" class="banner floatLeft" />
     <p class="clearRight">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
+      Lorem ipsum dolor sit, aimet consectetur adipisicing elit. Perspiciatis
       veritatis accusantium cupiditate voluptates consequatur pariatur,
       perferendis quisquam magni, eius tenetur omnis nisi vel amet reiciendis
       cumque animi ad, eos quae laboriosam beatae at quo ex quia consectetur?
