Worked with animations, pseudos and other css objs

--- a/5_CssProperties/index.html
+++ b/5_CssProperties/index.html
@@ -4,19 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <title>Document</title>
   </head>
+
   <body>
-    <p>Three column design</p>
-    <div class="blackBg column floatLeft">
-      <p class="whiteFg">Left column content</p>
+    <div class="blackBg windowWidth" style="opacity:0.5">
+      <p style="color: white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum labore
+        architecto nesciunt totam commodi suscipit accusantium quia maxime iure
+        eveniet id unde asperiores expedita, repellendus sapiente! Repellat
+        veniam, commodi corrupti est ex nemo fuga quos quam iure maiores? Omnis
+        praesentium porro ut fuga quis amet quasi impedit sunt architecto vel?
+        <span class="testPosition"
+          >Try making the screen as thin as possible</span
+        >
+      </p>
     </div>
-    <div class="whiteBg column floatLeft">
-      <p class="redFg">Middle column content</p>
-    </div>
-    <div class="redBg column floatLeft">
-      <p class="blackFg">Right column content</p>
+    <img src="./img/bear_1.jpeg" class="zImg" />
+    <div>
+      <img src="./img/river_background.jpg" class="banner floatLeft" />
+      <p class="clearRight">
+        Lorem ipsum dolor sit, aimet consectetur adipisicing elit. Perspiciatis
+        veritatis accusantium cupiditate voluptates consequatur pariatur,
+        perferendis quisquam magni, eius tenetur omnis nisi vel amet reiciendis
+        cumque animi ad, eos quae laboriosam beatae at quo ex quia consectetur?
+        Minima provident facilis voluptates obcaecati aliquid rerum at enim.
+        Sunt fuga laboriosam corrupti.
+      </p>
+      <p class="clearBoth">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum iusto ab
+        minus fugit! Voluptatum iure cupiditate, tenetur reiciendis facilis,
+        vel, distinctio tempore fugiat autem blanditiis officiis? Placeat
+        aliquam, fuga expedita veritatis maxime quo non voluptate assumenda,
+        natus nesciunt voluptates blanditiis eius rem ducimus voluptatem sed
+        officia excepturi? Suscipit, inventore velit.
+      </p>
+      <img src="./img/river_background.jpg" class="banner floatRight" />
+      <p class="clearLeft">
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        similique architecto labore quaerat unde sit optio minima minus, amet
+        soluta mollitia voluptatem quis nemo? Beatae, veritatis tenetur nostrum
+        facilis eos consequuntur! Ratione sapiente harum tenetur facilis facere.
+        Assumenda, esse. Eius, ut. Harum, mollitia. Nihil consequuntur deleniti,
+        harum ut repellendus ab?
+      </p>
+      <div class="windowWidth overflow">
+        <img src="./img/river_background.jpg" />
+      </div>
     </div>
   </body>
 </html>
